--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["js/background.js"]
+    "scripts": ["js/background.js"],
+    "type": "module"
   }
 }
