--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "DMCA Redirect",
-  "version": "1.0",
+  "version": "1.1.0",
   "description": "Suggests alternative searches when a DMCA notice is detected",
   "permissions": ["webRequest", "storage", "<all_urls>"],
   "browser_action": {
@@ -9,6 +9,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["js/background.js"]
+    "scripts": ["js/background.js"],
+    "type": "module"
   }
 }
