--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,21 @@
 {
-  "manifest_version": 2,
-  "name": "DMCA Redirect",
-  "version": "1.2.0",
-  "description": "Suggests alternative searches when a DMCA notice is detected",
-  "permissions": ["webRequest", "storage", "<all_urls>"],
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-  "background": {
-    "scripts": ["js/background.js"],
-    "type": "module"
-  }
+    "manifest_version":  2,
+    "name":  "DMCA Redirect",
+    "version":  "1.3.0",
+    "description":  "Suggests alternative searches when a DMCA notice is detected",
+    "permissions":  [
+                        "webRequest",
+                        "storage",
+                        "\u003call_urls\u003e"
+                    ],
+    "browser_action":  {
+                           "default_icon":  "icon.png",
+                           "default_popup":  "popup.html"
+                       },
+    "background":  {
+                       "scripts":  [
+                                       "js/background.js"
+                                   ],
+                       "type":  "module"
+                   }
 }
